Log

04/04/17
*trading/hist.py
- Fixing date time to RFC3339 format
- Fixing download part

Created new_hist.py

Problems:
- Need to reformat data
- Try to export to hdf5 format

05/04/17
Moved new_hist.py to main folder

*new_hist.py
- Added a mock strategy

Problems:
- Strategy not working (solved)

07/04/17
*new_hist.py
- Showing plot
- Strategy checked and worked

Problems:
- Add a y = 1 line for plot (solved using grid)
- Need to store data
- Create a strategy class
- Create a for loop for repetitive data chunk download (Solved)
	- Currently having issues with prices somehow being empty DataFrame
	- A few trials show that there is nothing wrong with data retrieval, but rather appending dataframe doesn't work
	- Solved, check here for solution: http://stackoverflow.com/questions/16597265/appending-to-an-empty-data-frame-in-pandas

Homework (Hoang):
- Read "Master databases for algorithmic trading" by quantstart
- Read chapter 3 of "Python for Algorithmic Trading"

